--- a/code/public/index.html
+++ b/code/public/index.html
@@ -2,6 +2,19 @@
 <html>
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://unpkg.com/hotkeys-js/dist/hotkeys.min.js"></script>
+<script type="text/javascript">
+hotkeys('ctrl+k',  function (event, handler){
+  switch (handler.key) {
+    case 'ctrl+k': alert('you pressed ctrl+k!');
+        event.preventDefault() 
+      break;
+    default: alert(event);
+  }
+  return false;
+});
+        
+</script> 
 <link rel="stylesheet" href="css/style.css">
 <body>
     <div id="container">
